[project]
name = "phasevisualizer"
version = "2.0.0"
description = "Scriabin-palette music visualization using Morlet CWT analysis."
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.21",
    "pydantic>=2.0",
    "tqdm>=4.0",
    "wvlt[numpy]",
]

[project.scripts]
phasevisualizer = "phasevisualizer.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.uv.sources]
wvlt = { path = "../music-visualizer/python", editable = true }
